+ res/anim/appear_from_top.xml > input_activity_layout.xml: preliminary layout design > strings.xml contains en-GB strings > InputActivity.java: calling Translator > JSONGetter: fixes to make it work properly. shall we use it now for JSON fetching purposes? + ResultsActivity.java, empty at the moment > Translator.java: fixes and improvements, it's working great now