@@ -1,13 +1,17 @@
 package com.ifmomd.slate;
 
 import android.os.AsyncTask;
+import org.apache.http.HttpResponse;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.impl.client.DefaultHttpClient;
 import org.json.JSONException;
 import org.json.JSONObject;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.io.InputStreamReader;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 class JSONGetter extends AsyncTask<String, Void, JSONObject> {
     interface ResultHandler {
@@ -21,20 +25,25 @@ class JSONGetter extends AsyncTask<String, Void, JSONObject> {
     private ResultHandler mOnCompleteCallback;
 
     @Override
-    protected JSONObject doInBackground(String... urls) {
-        URL url = null;
+    protected JSONObject doInBackground(String... uris) {
+        URI uri = null;
         try {
-            if (urls.length > 0)
-                url = new URL(urls[0]);
-        } catch (MalformedURLException ex) {
-            ex.printStackTrace();
+            if (uris.length > 0) {
+                uri = new URI(uris[0]);
+            }
+        } catch (URISyntaxException e) {
+            e.printStackTrace();
         }
         JSONObject result = null;
         try {
-            InputStream is = url.openStream();
-            byte[] buffer = new byte[is.available()];
-            is.read(buffer);
-            result = new JSONObject(new String(buffer));
+            HttpGet request = new HttpGet(uri);
+            HttpResponse response = new DefaultHttpClient().execute(request);
+            BufferedReader content = new BufferedReader(new InputStreamReader(response.getEntity().getContent()));
+            StringBuilder sb = new StringBuilder();
+            String s;
+            while ((s = content.readLine()) != null)
+                sb.append(s);
+            result = new JSONObject(sb.toString());
         } catch (JSONException ex) {
             ex.printStackTrace();
         } catch (IOException ex) {
